# pdf2word

./: .gitignore  CONTEXT.md  build.bat  build.sh  pdf2word.spec  pyproject.toml  requirements.txt
.github/workflows/: release.yml
docs/: prd-v1.md
docs/adr/: 0001-dual-layer-architecture.md  0002-no-intermediate-file-format.md  0003-v1-scope.md  0004-pyside6-tech-stack.md  0005-pipeline-and-error-handling.md
scripts/: entitlements.plist  installer.nsi  sign_mac.sh
src/: main.py
src/core/: model.py  pipeline.py  reader.py  writer.py
src/core/readers/: image_reader.py  pdf_reader.py
src/core/writers/: docx_writer.py  image_writer.py  pdf_writer.py
src/inference/: heading.py  infer.py  paragraph.py  table.py
src/ui/: convert_thread.py  drop_zone.py  main_window.py
tests/: test_docx_writer.py  test_image_reader.py  test_inference.py  test_model.py  test_pdf_reader.py  test_pipeline.py
