[project]
name = "pdf2word"
version = "0.1.0"
description = "轻量本地文档格式转换器"
requires-python = ">=3.11"
dependencies = [
    "PyMuPDF>=1.23.0",
    "python-docx>=1.0.0",
    "Pillow>=10.0.0",
    "PySide6>=6.5.0",
]

[project.scripts]
pdf2word = "src.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
